--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/mainLogo.png" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/mainLogo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Summer Camp</title>
+  <title>summerSports</title>
 </head>
 
 <body>
